--- a/src/views/update_user.ejs
+++ b/src/views/update_user.ejs
@@ -7,7 +7,7 @@
 
     <div class="user-data-main-div">
       <div class="user-data-inner-div container">
-        <h2 class="user-div-header">User Information</h2>
+        <h2 class="user-div-header">Update User Information</h2>
 
         <div class="information-div">
           <p>
