--- a/src/views/dashboard.ejs
+++ b/src/views/dashboard.ejs
@@ -13,9 +13,14 @@
       <section class="hero">
         <div class="hero-bg"></div>
         <div class="overlay">
+          <% if (loggedIn) { %>
+          <h1>Hello <%= username %></h1>
+          <% } %>
           <h1>Welcome to Your Driving Test Portal!</h1>
           <h3>Book your G and G2 driving tests easily.</h3>
+          <% if (!loggedIn) { %>
           <a href="/login" class="started-button">Get Started</a>
+          <% } %>
         </div>
       </section>
       <div class="dashboard-main-div">
