--- a/src/views/layouts/navbar.ejs
+++ b/src/views/layouts/navbar.ejs
@@ -64,15 +64,25 @@
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="/">Dashboard</a>
         </li>
+        <% if (loggedIn && userType === 'Driver') { %>
         <li class="nav-item">
           <a class="nav-link" href="/g2">G2 Test</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/g">G Test</a>
         </li>
+        <% } %> <% if (loggedIn) { %>
         <li class="nav-item">
-          <a class="nav-link" href="/login">Login</a>
+          <span class="nav-link"><%= username %></span>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/logout">Log out</a>
+        </li>
+        <% } else { %>
+        <li class="nav-item">
+          <a class="nav-link" href="/login">Login/Register</a>
+        </li>
+        <% } %>
       </ul>
     </div>
   </div>
