--- a/src/views/g2_page.ejs
+++ b/src/views/g2_page.ejs
@@ -50,6 +50,7 @@
                   class="form-control"
                   id="firstName"
                   name="firstName"
+                  value="<%= user && user.firstName !== 'default' ? user.firstName : '' %>"
                   placeholder="John"
                   required
                 />
@@ -65,6 +66,7 @@
                   class="form-control"
                   id="lastName"
                   name="lastName"
+                  value="<%= user && user.lastName !== 'default' ? user.lastName : '' %>"
                   placeholder="Doe"
                   required
                 />
@@ -80,6 +82,7 @@
                   class="form-control"
                   id="licenseNumber"
                   name="licenseNumber"
+                  value="<%= user && user.licenseNumber !== 'default' ? user.licenseNumber : '' %>"
                   placeholder="A1234-56789-12345"
                   minlength="17"
                   maxlength="17"
@@ -90,30 +93,27 @@
                 <span id="licenseError" class="error-message"></span>
               </div>
 
-              <div class="form-group">
+              <!-- <div class="form-group">
                 <label for="age">Age <span class="required">*</span></label>
                 <input
                   type="text"
                   class="form-control"
                   id="age"
                   name="age"
+                  value="<%= user && user.age!== 'default'? user.age : '' %>"
                   placeholder="25"
                   required
                 />
                 <span id="ageError" class="error-message"></span>
-              </div>
+              </div> -->
 
               <div class="form-group">
                 <label for="dob"
                   >Date of Birth <span class="required">*</span></label
                 >
-                <input
-                  type="date"
-                  class="form-control"
-                  id="dob"
-                  name="dob"
-                  required
-                />
+                <input type="date" class="form-control" id="dob" name="dob"
+                value="<%= user && user.dob !== 'default' ? user.dob : '' %>
+                required />
                 <span id="dobError" class="error-message"></span>
               </div>
             </div>
@@ -130,6 +130,7 @@
                   class="form-control"
                   id="carMake"
                   name="make"
+                  value="<%= user && user.car_details && user.car_details.make !== 'default' ? user.car_details.make : '' %>"
                   placeholder="Mercedes-Maybach"
                   required
                 />
@@ -145,6 +146,7 @@
                   class="form-control"
                   id="carModel"
                   name="model"
+                  value="<%= user && user.car_details && user.car_details.model!== 'default'? user.car_details.model : '' %>"
                   placeholder="4MATXXX"
                   required
                 />
@@ -160,6 +162,7 @@
                   class="form-control"
                   id="carYear"
                   name="year"
+                  value="<%= user && user.car_details && user.car_details.year !== 'default' ? user.car_details.year : '' %>"
                   placeholder="2024"
                   min="1900"
                   max="2024"
@@ -177,6 +180,7 @@
                   class="form-control"
                   id="plateNumber"
                   name="plateNumber"
+                  value="<%= user && user.car_details && user.car_details.plateNumber !== 'default' ? user.car_details.plateNumber : '' %>"
                   placeholder="1HGTXXX"
                   required
                 />
@@ -186,7 +190,7 @@
 
             <!-- Submit Button -->
             <div class="text-center mt-3">
-              <button type="submit" class="button">Submit Request</button>
+              <button type="submit" class="button"><%= buttonText %></button>
             </div>
           </form>
         </div>
