--- a/src/views/layouts/navbar.ejs
+++ b/src/views/layouts/navbar.ejs
@@ -38,6 +38,18 @@
     object-fit: cover;
     margin-right: 10px;
   }
+
+  .username-circle {
+    background-color: #f80000;
+    color: #ffffff !important;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 2px 8px 0px 8px;
+  }
 </style>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
@@ -73,14 +85,17 @@
         </li>
         <% } %> <% if (loggedIn) { %>
         <li class="nav-item">
-          <span class="nav-link"><%= username %></span>
+          <span class="nav-link username-circle"><%= username.charAt(0).toUpperCase() %></span>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/logout">Log out</a>
         </li>
         <% } else { %>
         <li class="nav-item">
-          <a class="nav-link" href="/login">Login/Register</a>
+          <a class="nav-link" href="/login">Login</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/register">Register</a>
         </li>
         <% } %>
       </ul>
