--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -55,7 +55,7 @@
                 </div>
               </form>
 
-              <p class="do-not-have-account">Don't have an account? <a href="/signup">Sign up here</a></p>
+              <p class="do-not-have-account">Don't have an account? <a href="/register">Register here</a></p>
             </div>
           </div>
         </div>
