--- a/src/views/signup.ejs
+++ b/src/views/signup.ejs
@@ -20,7 +20,7 @@
               <form
                 class="login-form"
                 id="signupForm"
-                action="/signup"
+                action="/register"
                 method="POST"
                 novalidate
               >
@@ -148,7 +148,7 @@
           const userType = document.getElementById("UserType").value;
           if (userType === "") {
             document.getElementById("userTypeError").textContent =
-              "Please select a user type.";
+              "Please select an user type.";
             isValid = false;
           }
 
