--- a/src/views/g2_page.ejs
+++ b/src/views/g2_page.ejs
@@ -31,13 +31,7 @@
           <h2 class="text-center">G2 Test Booking Form</h2>
 
           <!-- G2 Test Booking Form -->
-          <form
-            class="g2-test-form"
-            id="g2Form"
-            action="/g2"
-            method="POST"
-            novalidate
-          >
+          <form class="g2-test-form" id="g2Form" action="/g2" method="POST">
             <!-- Personal Information Section -->
             <div class="section">
               <h2>Personal Information</h2>
@@ -93,26 +87,12 @@
                 <span id="licenseError" class="error-message"></span>
               </div>
 
-              <!-- <div class="form-group">
-                <label for="age">Age <span class="required">*</span></label>
-                <input
-                  type="text"
-                  class="form-control"
-                  id="age"
-                  name="age"
-                  value="<%= user && user.age!== 'default'? user.age : '' %>"
-                  placeholder="25"
-                  required
-                />
-                <span id="ageError" class="error-message"></span>
-              </div> -->
-
               <div class="form-group">
                 <label for="dob"
                   >Date of Birth <span class="required">*</span></label
                 >
                 <input type="date" class="form-control" id="dob" name="dob"
-                value="<%= user && user.dob !== 'default' ? user.dob : '' %>
+                value="<%= user && user.dob !== 'default' ? user.dob : '' %>""
                 required />
                 <span id="dobError" class="error-message"></span>
               </div>
