--- a/src/views/notfound.ejs
+++ b/src/views/notfound.ejs
@@ -7,12 +7,11 @@
     <%- include('layouts/navbar'); -%>
 
     <!-- Main Content -->
-    <main class="no-user-page-main-div-style">
-      <div class="no-user-page-container">
-        <h2 class="text-center">No User Found</h2>
-        <p>Please check your License Number and try again.</p>
-        <a href="/g">Go Back to G Page</a>
-      </div>
+    <main class="not-found-container text-center">
+      <h1>404</h1>
+      <h2>Oops! Page Not Found</h2>
+      <p>The page you are looking for doesn't exist or has been moved.</p>
+      <a href="/" class="button">Go Back to Home</a>
     </main>
 
     <!-- Footer -->
