--- a/src/views/layouts/navbar.ejs
+++ b/src/views/layouts/navbar.ejs
@@ -82,9 +82,15 @@
         <li class="nav-item">
           <a class="nav-link" href="/g">G Test</a>
         </li>
+        <% } %> <% if (loggedIn && userType === 'Admin') { %>
+        <li class="nav-item">
+          <a class="nav-link" href="/appointment">Manage Appointments</a>
+        </li>
         <% } %> <% if (loggedIn) { %>
         <li class="nav-item">
-          <span class="nav-link username-circle"><%= username.charAt(0).toUpperCase() %></span>
+          <span class="nav-link username-circle"
+            ><%= username.charAt(0).toUpperCase() %></span
+          >
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/logout">Log out</a>
