--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -401,6 +401,7 @@ label {
 input[type="text"],
 input[type="password"],
 input[type="number"],
+input[type="time"],
 input[type="date"] {
   width: 100%;
   padding: 10px;
@@ -482,6 +483,17 @@ input:focus {
   color: #000000;
 }
 
+.no-booked-appointment-style{
+  text-align: center;
+  font-size: 1.2rem;
+  font-weight: 600;
+}
+
+.no-booked-appointment-style a {
+  color: #ff0000;
+  text-decoration: none;
+}
+
 /* no user page css */
 
 .no-user-page-main-div-style {
@@ -555,4 +567,53 @@ input:focus {
 .not-found-container p {
   font-size: 18px;
   margin-bottom: 30px;
+}
+
+
+/* appointment page style */
+
+.appointment-main-div {
+  margin-top: 85px;
+  background-image: url('/images/admin-dashboard-image.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+
+.appointment-main-div::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-image: inherit;
+  background-size: inherit;
+  background-position: inherit;
+  background-repeat: inherit;
+  filter: blur(2px) brightness(0.5); 
+  z-index: 1;
+}
+
+.appointment-inner-div {
+  position: relative;
+  max-width: 700px !important;
+  z-index: 2;
+  background-color: rgba(255, 255, 255, 0.8); 
+  padding: 2rem !important;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.appointment-inner-div h1{
+  font-size: 36px;
+  font-weight: 600;
+  text-align: center;
+  margin-bottom: 2rem;
 }
