--- a/src/views/g2_page.ejs
+++ b/src/views/g2_page.ejs
@@ -173,6 +173,39 @@
                 />
                 <span id="plateError" class="error-message"></span>
               </div>
+
+              <div class="section mt-4">
+                <h2>Appointment Slot</h2>
+                <div class="form-group">
+                  <label for="appointmentDate"
+                    >Select Date <span class="required">*</span></label
+                  >
+                  <input
+                    type="date"
+                    class="form-control"
+                    id="appointmentDate"
+                    name="appointmentDate"
+                    required
+                  />
+                  <span id="appointmentDateError" class="error-message"></span>
+                </div>
+
+                <div class="form-group">
+                  <label for="availableSlots"
+                    >Available Slots <span class="required">*</span></label
+                  >
+                  <select
+                    class="form-control"
+                    id="availableSlots"
+                    name="appointmentId"
+                    required
+                  >
+                    <option value="">-- Select a time slot --</option>
+                    <!-- Slots will be dynamically loaded here -->
+                  </select>
+                  <span id="slotError" class="error-message"></span>
+                </div>
+              </div>
             </div>
 
             <!-- Submit Button -->
@@ -188,5 +221,6 @@
     <%- include('layouts/footer'); -%> <%- include('layouts/scripts'); -%>
 
     <script src="/js/scripts.js"></script>
+    <script src="/js/availableSlots.js"></script>
   </body>
 </html>
