--- a/src/views/g_page.ejs
+++ b/src/views/g_page.ejs
@@ -37,7 +37,21 @@
             <strong>Date of Birth:</strong> <%= formattedDob %>
           </p>
 
-          <h2 class="text-center mt-4">Update Car Information</h2>
+          <h2 class="text-center mt-4 pt-1">Booked Appointment</h2>
+          <% if (appointmentDetails) { %>
+          <div class="appointment-info">
+            <p><strong>Date:</strong> <%= appointmentDetails.date %></p>
+            <p><strong>Time:</strong> <%= appointmentDetails.time %></p>
+            <p><strong>Location:</strong> <%= appointmentDetails.location %></p>
+          </div>
+          <% } else { %>
+          <p class="no-booked-appointment-style">
+            You have no booked appointments.
+            <a href="/g2">Book an appointment here.</a>
+          </p>
+          <% } %>
+
+          <h2 class="text-center mt-4 pt-3">Update Car Information</h2>
           <form id="gForm" action="/g" method="POST">
             <label for="carMake">Make:</label>
             <input
