complted slot booking, both admin and user side

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -431,16 +431,16 @@ input:focus {
   margin-top: 5px;
 }
 
-.bigger-text{
-  font-size: 22px ;
+.bigger-text {
+  font-size: 22px;
 }
 
-.license-number-style{
+.license-number-style {
   color: #ff0000;
   font-weight: 600;
 }
 
-.license-number-style strong{
+.license-number-style strong {
   color: #000000 !important;
   font-weight: bold;
 }
@@ -483,8 +483,7 @@ input:focus {
   color: #000000;
 }
 
-.no-booked-appointment-style{
-  text-align: center;
+.no-booked-appointment-style {
   font-size: 1.2rem;
   font-weight: 600;
 }
@@ -494,6 +493,26 @@ input:focus {
   text-decoration: none;
 }
 
+.available-slots-g-page {
+  color: #ff0000;
+  font-size: 1.2rem;
+  font-weight: 600;
+}
+
+.available-slots-g-page-form label{
+  font-size: 1.2rem;
+  font-weight: 600;
+  padding-right: 0.3rem;
+}
+
+.available-slots-g-page-form select{
+  border: 2px solid #000000;
+  border-radius: 5px;
+  padding: 0.5rem 1rem;
+  margin-right: 1rem;
+  font-size: 1.2rem;
+  font-weight: 700
+}
 /* no user page css */
 
 .no-user-page-main-div-style {
@@ -569,12 +588,11 @@ input:focus {
   margin-bottom: 30px;
 }
 
-
 /* appointment page style */
 
 .appointment-main-div {
   margin-top: 85px;
-  background-image: url('/images/admin-dashboard-image.jpg');
+  background-image: url("/images/admin-dashboard-image.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -597,7 +615,7 @@ input:focus {
   background-size: inherit;
   background-position: inherit;
   background-repeat: inherit;
-  filter: blur(2px) brightness(0.5); 
+  filter: blur(2px) brightness(0.5);
   z-index: 1;
 }
 
@@ -605,13 +623,13 @@ input:focus {
   position: relative;
   max-width: 700px !important;
   z-index: 2;
-  background-color: rgba(255, 255, 255, 0.8); 
+  background-color: rgba(255, 255, 255, 0.8);
   padding: 2rem !important;
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
-.appointment-inner-div h1{
+.appointment-inner-div h1 {
   font-size: 36px;
   font-weight: 600;
   text-align: center;
