added slots file to see all available slots in the admin page

--- a/src/views/dashboard.ejs
+++ b/src/views/dashboard.ejs
@@ -22,6 +22,8 @@
           <h1>Welcome to Your Admin Portal!</h1>
           <h3>Manage your users and test schedules.</h3>
           <% } %> <% if (!loggedIn) { %>
+          <h1>Welcome to the Driving Test Portal</h1>
+          <h3>Login or Register to book and manage driving tests</h3>
           <a href="/login" class="started-button">Get Started</a>
           <% } %>
         </div>
