--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -635,3 +635,29 @@ input:focus {
   text-align: center;
   margin-bottom: 2rem;
 }
+
+
+/* All slots available style */
+
+.slot-container {
+  margin-top: 2rem;
+  padding: 1rem;
+  border-bottom: 1px solid #ccc;
+}
+.date-title {
+  font-size: 1.4rem;
+  font-weight: bold;
+  color: #333;
+  margin-bottom: 0.5rem;
+}
+.time-slot {
+  display: inline-block;
+  padding: 0.5rem 1rem;
+  border-radius: 5px;
+  background-color: #f0f0f0;
+  margin: 0.25rem;
+}
+.booked-slot {
+  background-color: #ddd;
+  color: #888;
+}
